--- a/package.json
+++ b/package.json
@@ -15,11 +15,16 @@
     "axios": "^1.3.4",
     "flowbite": "^1.6.4",
     "gsap": "^3.11.5",
+    "lodash": "^4.17.21",
     "pinia": "^2.0.32",
+    "postcss-import": "^15.1.0",
+    "postcss-nesting": "^11.2.1",
     "vee-validate": "^4.8.3",
     "vue": "^3.2.47",
     "vue-axios": "^3.5.2",
-    "vue-router": "^4.1.6"
+    "vue-loading-overlay": "^6.0.3",
+    "vue-router": "^4.1.6",
+    "vue-sweetalert2": "^5.0.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
@@ -27,7 +32,6 @@
     "eslint": "^8.36.0",
     "eslint-plugin-vue": "^9.9.0",
     "postcss": "^8.4.21",
-    "postcss-import": "^15.1.0",
     "tailwindcss": "^3.2.7",
     "vite": "^4.2.1"
   }
