--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "@vee-validate/rules": "^4.8.3",
     "aos": "^2.3.4",
     "axios": "^1.3.4",
+    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-promise": "^6.1.1",
     "flowbite": "^1.6.4",
     "gsap": "^3.11.5",
     "lodash": "^4.17.21",
     "pinia": "^2.0.32",
     "postcss-import": "^15.1.0",
     "postcss-nesting": "^11.2.1",
+    "sweetalert2": "^11.7.3",
     "vee-validate": "^4.8.3",
+    "vite-plugin-eslint": "^1.8.1",
     "vue": "^3.2.47",
     "vue-axios": "^3.5.2",
     "vue-loading-overlay": "^6.0.3",
@@ -29,7 +33,10 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
     "autoprefixer": "^10.4.14",
-    "eslint": "^8.36.0",
+    "eslint": "^8.38.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-vue": "^9.9.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
